PR changes: - replaced figure text divs with figcaptions - now binding events in js file itself - removed and ignored built css file to being pushed into github - renaming names in carousel.js - changed up naming of css spacing variables - using sticky navbar instead of having it fixed

--- a/sass/components/_carousel.scss
+++ b/sass/components/_carousel.scss
@@ -54,7 +54,7 @@
   font-size: $carousel-header-font-size;
   font-family: Roboto;
   font-weight: 500;
-  padding: $spacer-3;
+  padding: $spacer-1;
   position: absolute;
   bottom: 4.5rem;
   width: 100%;
