--- a/sass/components/_main-menu.scss
+++ b/sass/components/_main-menu.scss
@@ -52,7 +52,7 @@
   bottom: 3rem;
   text-transform: uppercase;
   text-align: center;
-  padding-bottom: $spacer-2;
+  padding-bottom: $spacer-0;
   color: $color-primary;
   font-family: Montserrat;
   font-size: $default-font-size;
