--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,5 +1,5 @@
 footer p {
-  padding: $spacer-5 0;
+  padding: $spacer-2 0;
   text-align: center;
   font-size: 2rem;
   color: $color-primary;
