--- a/sass/layout/_navbar.scss
+++ b/sass/layout/_navbar.scss
@@ -14,7 +14,7 @@ body {
   z-index: 100;
   height: 5rem;
   width: 100%;
-  position: fixed;
+	position: sticky;
   top: 0;
   background-color: $color-primary;
   justify-content: space-between;
@@ -28,7 +28,7 @@ body {
   display: inline-block;
   font-size: $default-font-size;
   color: #fff;
-  padding: $spacer-3;
+  padding: $spacer-1;
 }
 
 .nav-btn {
